// Message identifier: 8.
syntax="proto3";
message ModuleDescriptor {
    string name = 1;
    string identifier = 2;
    string version = 3;
    float frequency = 4;
}
message RuntimeStatistic {
    double sliceConsumption = 1;
}

message ModuleStatistic {
    ModuleDescriptor module = 1;
    RuntimeStatistic runtimeStatistic = 2;
}
message ModuleStatistics {
    repeated ModuleStatistic moduleStatistics = 1;
}
message TimePoint{
	int32 seconds = 1;
	int32 microseconds =2;
}
message Container{
	int32 dataType = 1;
    bytes serializedData  = 2;
    TimePoint sent = 3;
    TimePoint received = 4;
    TimePoint sampleTimeStamp = 5;
}
